# rustmc

./: .gitignore  Cargo.toml  README.md  README_RU.md
src/: address.rs  batch.rs  cache.rs  dns.rs  error.rs  lib.rs  resolver.rs  server.rs
src/motd/: component.rs  mod.rs  parser.rs
src/protocol/: bedrock.rs  java.rs  legacy.rs  mod.rs  query.rs
src/protocol/io/: buffer.rs  connection.rs  mod.rs
src/response/: bedrock.rs  dns_info.rs  forge.rs  java.rs  legacy.rs  mod.rs  query.rs
tests/: test_address.rs  test_bedrock.rs  test_buffer.rs  test_cache.rs  test_java.rs  test_legacy.rs  test_motd.rs  test_query.rs
